frontend/tests/cases/negative/unknownTyVar.gr
id : Int -> a
id x = x